# AI-projects

AI-projects/ai-system-health-dashboard/: .env  ORGANIZATION_COMPLETE.md  README.md  REPOSITORY_STRUCTURE.md  cookies.txt  create_admin.py  (+4 more)
CipherMount/: Cargo.toml  README.md
CipherMount/src/: main.rs
CipherMount/src/crypto/: mod.rs
CipherMount/src/fuse/: mod.rs
CipherMount/tests/: integration_test.rs
PXE-server/: README.md  setup.sh
VM-Switch/: README.md  app.py
VectorPass/: .env  .env.example  .gitignore  README.md  requirements.txt
WAF/: .gitignore  README.md  setup.sh  test-waf.sh
ai-system-health-dashboard/: .env.example  .gitignore  AGENT_DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  MANUAL_FIX_GUIDE.md  MANUAL_NON_ROOT_FIX.md  NON_ROOT_DEPLOYMENT_GUIDE.md  NON_ROOT_READY.md  QUICK_FIX_SUMMARY.md  QUICK_NON_ROOT_FIX.md  README.md  agent_example.py  agent_fedora.py  agent_status_report.json  ashd-agent.service  auto_discovery_summary.md  centos_docker_debug.md  cookies.txt  correct_ip_deployment_guide.md  debug_cookies.txt  deploy_agent.sh  deploy_agent_manual.sh  deploy_centos_docker_agent.sh  deploy_non_root_centos_docker.sh  deploy_now.sh  deploy_to_192_168_50_1.sh  deploy_to_192_168_50_198.sh  deploy_to_192_168_50_81.sh  deploy_to_192_168_50_89.sh  deployment_commands.json  deployment_plan.json  discovery_results.json  fix_centos_docker_direct.sh  fix_ntp_centos_docker.sh  hostname_fix_summary.md  install_agent_fedora.sh  monitoring_config.json  new_cookies.txt  pysnmp_fix_summary.md  requirements.txt  (+2 more)
siem/: README.md  requirements.txt
(+193 files in other folders)
