[package]
name = "ciphermount"
version = "0.1.0"
edition = "2021"
description = "An encrypted FUSE filesystem using AES-GCM 256-bit encryption"

[dependencies]
fuser = "0.14"
ring = "0.17"
libc = "0.2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
